# kohonen-som

./: .gitignore  Makefile  README.md  pyproject.toml
config/: dev_config.yaml  production_config.yaml
examples/: train_som.py
kohonen_notebook/: kohonen.ipynb
src/kohonen_som/: conf.py
src/kohonen_som/data/: loader.py
src/kohonen_som/models/: som.py
src/kohonen_som/visualisation/: plotter.py
tests/: conftest.py  test_data_loader.py  test_som.py  test_visualisation.py
