[tool.poetry]
name = "kohonen-som"
version = "0.1.0"
description = "A Self-Organising Map implementation using the Kohonen algorithm"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "kohonen_som", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^ 2.2.3"
matplotlib = "^3.7.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "poetry.scripts:format"
lint = "poetry.scripts:lint"
test = "poetry.scripts:test"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=kohonen_som --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
] 